# AI-Engineering-Journey

./: .gitignore  Dockerfile  docker-compose.yml  env.example  main.py  pyproject.toml
apps/apis/: Dockerfile  pyproject.toml
apps/apis/src/apis/: app.py
notebooks/prerequiste/: llm-api.ipynb
src/: app.py
src/core/: config.py
