[project]
name = "maven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.11.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]

[tool.uv.workspace]
members = [
    "apps/apis",
]
